refactor: improve solidness of config querying